--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.0.0 
-  json_annotation: ^4.0.1
-  flutter_spinkit: ^5.1.0 
+  http: ^1.2.2
+  cached_network_image: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,8 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.0
-  json_serializable: ^6.0.1
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
