--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  flutter_localizations:  
+    sdk: flutter
+  intl: ^0.19.0
   cached_network_image: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_utils: ^2.6.0
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
