--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
-  flutter_localizations:  
+  flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
   cached_network_image: ^3.1.0
+  provider: ^6.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,7 +45,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_utils: ^2.6.0
-  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,6 +58,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
